# app-source

./: .dockerignore  Dockerfile  Dockerfile.dev  Jenkinsfile  Jenkinsfile-test  Jenkinsfile.dev  Jenkinsfile.prod  README.md  pyproject.toml
.github/actions/jenkins-abort/: action.yaml
.github/actions/jenkins-trigger/: action.yaml
.github/actions/trigger-jenkins/: action.yml
.github/workflows/: merge-to-main.yaml  podinfo-ci-cd-dockerhub.yaml  podinfo-ci-cd-ecr.yaml  podinfo-pr-validation.yaml
src/podinfo/: __init__.py  logic.py  main.py
src/podinfo/templates/: dashboard.html
tests/: __init__.py  conftest.py  test_logic.py
