[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podinfo"
version = "0.1.0"
description = "Lightweight FastAPI service exposing host, version, and environment metadata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.44.0",
]


[dependency-groups]
dev = [
    "black>=26.3.1",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]

[project.scripts]
podinfo = "podinfo.main:main"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = ["py311"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
podinfo = ["templates/*.html"]
