[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podinfo"
version = "0.1.0"
description = "Lightweight FastAPI service exposing host, version, and environment metadata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "black>=26.3.1",
    "mypy>=1.20.2",
    "bandit>=1.9.4",
    "types-requests>=2.33.0.20260408"
]

[project.scripts]
podinfo = "podinfo.main:main"

[tool.ruff]
line-length = 65

[tool.black]
line-length = 65
target-version = ["py311"]
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | uv\.lock
)/
'''

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = [".venv", "__pycache__", "build", "dist"]
skips = ["B101", "B104"]

[tool.pytest.ini_options]
addopts = "-rA -s -v"
markers = [
    "fast: quick unit tests",
    "slow: take a long time to run",
    "api: hit the API",
    "smoke: quick to run and check basic, critical functionality"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
podinfo = ["templates/*.html"]
